# eticketing

./: .gitignore  README.md  package.json  printbridge.js  start.sh
backend/: .env.example  Cargo.toml  run.sh
backend/src/: cache.rs  config.rs  db.rs  error.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  mod.rs  product.rs  ticket.rs  transaction.rs  user.rs
backend/src/routes/: auth.rs  categories.rs  health.rs  investors.rs  mod.rs  payment_methods.rs  products.rs  reports.rs  settings.rs  tickets.rs  transactions.rs  users.rs  variants.rs
backend/src/services/: invoice.rs  mod.rs  ticket.rs
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: auth.ts  client.ts  index.ts  resources.ts
frontend/src/lib/components/layout/: AppShell.svelte  Sidebar.svelte  Topbar.svelte
frontend/src/lib/components/pos/: CartPanel.svelte  CheckoutModal.svelte  ProductGrid.svelte
frontend/src/lib/stores/: auth.ts  bluetooth.ts  bridge.ts  cart.ts  drafts.ts  navigation.ts  serial.ts  theme.ts  toast.ts
frontend/src/lib/types/: index.ts
frontend/src/lib/utils/: device.ts  export.ts  format.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/(app)/: +layout.svelte  +layout.ts
frontend/src/routes/login/: +page.svelte
infra/docker/: docker-compose.yml
infra/migrations/: 0001_initial.sql  0002_settings_venue_footer.sql
infra/vps/: deploy.sh  nginx.conf  tiketku-backend.service
(+25 files in other folders)
